--- a/src/pages/blog/avoid-email-scams.mdx
+++ b/src/pages/blog/avoid-email-scams.mdx
@@ -5,123 +5,132 @@ date: "2023-01-04"
 featuredImage: "../../images/illustrations/inbox-money.png"
 ---
 
-import { Link } from 'gatsby'
-import inboxMoney from '../../images/illustrations/inbox-money.png'
-import {Wrapper} from "../../components/Markdown-Wrapper"
+import { Link } from "gatsby"
+import inboxMoney from "../../images/illustrations/inbox-money.png"
+import { Wrapper } from "../../components/Markdown-Wrapper"
 
 export const meta = {
   title: "Email Scams: Protection Tactics and Profitable Solutions",
-  description: "Get cash back for blocking spam emails! Discover how you can stop email scams with FynCom's innovative whitelist tool + get rewarded for every scam email blocked. It's time to declutter your inbox and get paid for it!"
-};
+  description:
+    "Get cash back for blocking spam emails! Discover how you can stop email scams with FynCom's innovative whitelist tool + get rewarded for every scam email blocked. It's time to declutter your inbox and get paid for it!",
+}
 
 <Wrapper seo={meta}>
 
-  # Email Scams or Cash In Your Pocket?
+# Email Scams or Cash In Your Pocket?
 
-  It took 7 years from the invention of emails in 1971 before the [1st spam email was sent](https://www.weforum.org/agenda/2018/05/its-40-years-since-the-first-spam-email-was-sent-here-are-6-things-you-didnt/)! That campaign generated $13M back then, or nearly $60M in today's dollars. With those kinds of economic gains, it's no wonder why "spam" has only intensified over time. The difference between "spam" and "marketing" is a passionate topic [that gets different responses](https://www.computerworld.com/article/2539767/unsung-innovators--gary-thuerk--the-father-of-spam.html) based on whether you're talking to a "consumer" or to a "business".
+It took 7 years from the invention of emails in 1971 before the [1st spam email was sent](https://www.weforum.org/agenda/2018/05/its-40-years-since-the-first-spam-email-was-sent-here-are-6-things-you-didnt/)! That campaign generated $13M back then, or nearly $60M in today's dollars. With those kinds of economic gains, it's no wonder why "spam" has only intensified over time. The difference between "spam" and "marketing" is a passionate topic [that gets different responses](https://www.computerworld.com/article/2539767/unsung-innovators--gary-thuerk--the-father-of-spam.html) based on whether you're talking to a "consumer" or to a "business".
 
-  <div className="use-case-section">
-    <div className="use-case-image">
-      <img src={inboxMoney} alt="Understand your customers better" />
-    </div>
-    <div className="use-case-description">
-      To us, it doesn't really matter. It's either powered by FynCom (**which adds real cash to the interaction**) or it's not. Based on recent trends, we are considering bringing our [patented "FynCom Filter" technology](https://patents.google.com/patent/US11310368B2) to emails - **allowing you to get instantly paid for every spam email you allow us to block**. First, we need you to vote with your wallets or your signups.
-    </div>
+{" "}
+
+<div className="use-case-section">
+  <div className="use-case-image">
+    <img src={inboxMoney} alt="Understand your customers better" />
   </div>
+  <div className="use-case-description">
+    To us, it doesn't really matter. It's either powered by FynCom (**which adds
+    real cash to the interaction**) or it's not. Based on recent trends, we are
+    considering bringing our [patented "FynCom Filter"
+    technology](https://patents.google.com/patent/US11310368B2) to emails -
+    **allowing you to get instantly paid for every spam email you allow us to
+    block**. First, we need you to vote with your wallets or your signups.
+  </div>
+</div>
 
-  The FynCom Filter was first demonstrated in our [KarmaCall mobile application](https://karmacall.com/), where we gave over [100,000 instant payments](https://www.nanolooker.com/account/nano_3rcpayu3g39njpq3mkizuepfr5rh1nwuz4xypwsmubkoiww88wubff8d719t) to people for blocking phone scam calls. Immediately after we blocked a scam call, the call recipient (the KarmaCall user) would receive a financial payment.
+The FynCom Filter was first demonstrated in our [KarmaCall mobile application](https://karmacall.com/), where we gave over [100,000 instant payments](https://www.nanolooker.com/account/nano_3rcpayu3g39njpq3mkizuepfr5rh1nwuz4xypwsmubkoiww88wubff8d719t) to people for blocking phone scam calls. Immediately after we blocked a scam call, the call recipient (the KarmaCall user) would receive a financial payment.
 
-  We spent some time focusing on the business side of our strategy and are now ready to launch a new product for everyone else.
+We spent some time focusing on the business side of our strategy and are now ready to launch a new product for everyone else.
 
-  ### **Here's what happens in most people's email inboxes**
+### **Here's what happens in most people's email inboxes**
 
-  1. An email lands in your inbox
-  2. You checks the email and see that it's spam or a scam
-  3. You get annoyed
+1. An email lands in your inbox
+2. You checks the email and see that it's spam or a scam
+3. You get annoyed
 
-  ### **What happens when you have a FynCom Filter**
+### **What happens when you have a FynCom Filter**
 
-  1. An email lands in your inbox
-  2. FynCom checks the email to see if it is a response to an email you sent
-  3. **If Yes.** The email goes into your main inbox like normal
-  4. **If No.** FynCom checks if sender is in your contacts list
-  5. **If Yes.** The email goes into your main inbox like normal
-  6. I **f No.** FynCom checks if this sender has a FynCom account with more than $0.01 worth of funds.
-  7. **If Yes.** You'll have 30 days to respond. The email will go to your main inbox and get tagged with one of the following:
-  8. **FynReward.** If you respond to this email, you immediately receive the reward the sender has allocated for this campaign. If you don't respond, the sender will lose $0.01 to you. _ **This is probably a sales pitch, survey, feedback / meeting request or other commercial email.** _
-  9. **FynEmail.** No reward for responding. If you don't respond, the sender will lose $0.01 to you. _ **This is probably a friend, family member, loved one, or business partner.** _
-  10. I **f No.** The email gets tagged and moved into a separate folder called "FynCom Filter". It won't be in your main inbox.
-  11. FynCom prepares a payment for you & you get happy :)
+1. An email lands in your inbox
+2. FynCom checks the email to see if it is a response to an email you sent
+3. **If Yes.** The email goes into your main inbox like normal
+4. **If No.** FynCom checks if sender is in your contacts list
+5. **If Yes.** The email goes into your main inbox like normal
+6. **If No.** FynCom checks if this sender has a FynCom account with more than $0.01 worth of funds.
+7. **If Yes.** You'll have 30 days to respond. The email will go to your main inbox and get tagged with one of the following:
+8. **FynReward.** If you respond to this email, you immediately receive the reward the sender has allocated for this campaign. If you don't respond, the sender will lose $0.01 to you. _ **This is probably a sales pitch, survey, feedback / meeting request or other commercial email.** _
+9. **FynEmail.** No reward for responding. If you don't respond, the sender will lose $0.01 to you. _ **This is probably a friend, family member, loved one, or business partner.** _
+10. **If No.** The email gets tagged and moved into a separate folder called "FynCom Filter". It won't be in your main inbox.
+11. FynCom prepares a payment for you & you get happy :)
 
-  There are obvious situations where you want to receive an email in your main inbox, such as
+There are obvious situations where you want to receive an email in your main inbox, such as
 
-  when you get a response from a support ticket and other situations like that. We will address that over time. If any of those emails land in your FynCom Filter inbox, just move that email back into your mail inbox and we whitelist that sender so they end up in your main inbox.
+when you get a response from a support ticket and other situations like that. We will address that over time. If any of those emails land in your FynCom Filter inbox, just move that email back into your mail inbox and we whitelist that sender so they end up in your main inbox.
 
-  The requirements are
+The requirements are
 
-  1. GMail accounts only
-  2. Upfront payment with 3 options
-  3. $2 per month
-  4. $15 per year
-  5. $49 for life (limited time)
+1. GMail accounts only
+2. Upfront payment with 3 options
+3. $2 per month
+4. $15 per year
+5. $49 for life (limited time)
 
-  ## **Why & What's in it for me?**
+## **Why & What's in it for me?**
 
-  1. I'M SICK OF GETTING SPAM EMAILS.
-  2. The future is headed towards a society that will require some form of "REFUNDABLE financial deposit" in order to email / call / text / DM / cold contact someone. We predicted this years ago with our first <Link to={"/white-paper-original-scam-calls"}>white paper</Link>, and have staked our entire business model around being that financial lubricant that will sustain this ecosystem.
-  3. This will help us get more awareness regarding our business facing products.
-  4. Specifically, we want to make it known that FynCom Filters can be used in any form of direct communications between two parties like DMs, group DMs, etc. _ **Twitter / Discord / Telegram - We see you & want to help!** _
+1. I'M SICK OF GETTING SPAM EMAILS.
+2. The future is headed towards a society that will require some form of "REFUNDABLE financial deposit" in order to email / call / text / DM / cold contact someone. We predicted this years ago with our first <Link to={"/white-paper-original-scam-calls"}>white paper</Link>, and have staked our entire business model around being that financial lubricant that will sustain this ecosystem.
+3. This will help us get more awareness regarding our business facing products.
+4. Specifically, we want to make it known that FynCom Filters can be used in any form of direct communications between two parties like DMs, group DMs, etc. _ **Twitter / Discord / Telegram - We see you & want to help!** _
 
-  We're happy to have FynCom Filters compete in this space along with other innovators like Unum ID and Gated. Here's why you would want to use FynCom instead of those 2 great companies
+We're happy to have FynCom Filters compete in this space along with other innovators like Unum ID and Gated. Here's why you would want to use FynCom instead of those 2 great companies
 
-  1. We pay you for every email you block
-  2. You will be eligible to receive bonus payments in the future.
+1. We pay you for every email you block
+2. You will be eligible to receive bonus payments in the future.
 
-  #1 is straightforward enough. Regarding #2, our plan is to give businesses the ability to reward you for your response. One easy way for us to do this, is to see which businesses email our FynCom'ers the most. When we're ready, we'll approach those businesses with metrics on how often we've blocked their emails, and suggestions for the best amount they can offer you to get you to respond & engage. That doesn't mean you have to respond to them, you can continue letting go to your "FynCom Filter" list. When we turn those businesses into customers, we'll have records from the FynCom'ers whose emails were aggregated and give them a share of the revenue we generate from this business. This is our way of ensuring that you, our FynCom'ers get to make $$ with us.
+#1 is straightforward enough. Regarding #2, our plan is to give businesses the ability to reward you for your response. One easy way for us to do this, is to see which businesses email our FynCom'ers the most. When we're ready, we'll approach those businesses with metrics on how often we've blocked their emails, and suggestions for the best amount they can offer you to get you to respond & engage. That doesn't mean you have to respond to them, you can continue letting go to your "FynCom Filter" list. When we turn those businesses into customers, we'll have records from the FynCom'ers whose emails were aggregated and give them a share of the revenue we generate from this business. This is our way of ensuring that you, our FynCom'ers get to make $$ with us.
 
-  ## **Call To Action**
+## **Call To Action**
 
-  We need your support to make this future happen. We want 1,000 paying FynCom'ers before we'll be able to dedicate time to this and make this a reality. For us, this project can be completed within weeks. We've spent years building our underlying infrastructure and have learned to focus on following the $$. We would really appreciate your support!
+We need your support to make this future happen. We want 1,000 paying FynCom'ers before we'll be able to dedicate time to this and make this a reality. For us, this project can be completed within weeks. We've spent years building our underlying infrastructure and have learned to focus on following the $$. We would really appreciate your support!
 
-  <div className="button-container">
-    <Link className="learn-more-btn cash centered" to="/fyncom-filters-email-edition">Click here to buy!</Link>
-  </div> <br/>
-  Here's the general strategy we are taking.
+{/* prettier-ignore */}
+<div className="button-container"><Link className="learn-more-btn cash centered" to="/fyncom-filters-email-edition">Click here to buy!</Link></div>
+<br/>
 
-  1. Now: Give you an app that pays you for every email you block
-  2. Later: Use the data we get from above to turn good businesses into customers
-  3. Later-er: Let those businesses reward you to respond
-  4. Later-est: Give you tools that let you set minimum value for a FynEmail or FynReward
-  5. FynEmail: Any friends / family, business partners must be willing to lose $X to you if you don't respond. Otherwise, they don't get to be in your main inbox.
-  6. FynReward: Similarly, any businesses must be willing to reward you at least $X in order to get your response - otherwise, they don't get to be in your main inbox.
+Here's the general strategy we are taking.
 
-  ## **Rewards FAQs**
+1. Now: Give you an app that pays you for every email you block
+2. Later: Use the data we get from above to turn good businesses into customers
+3. Later-er: Let those businesses reward you to respond
+4. Later-est: Give you tools that let you set minimum value for a FynEmail or FynReward
+5. FynEmail: Any friends / family, business partners must be willing to lose $X to you if you don't respond. Otherwise, they don't get to be in your main inbox.
+6. FynReward: Similarly, any businesses must be willing to reward you at least $X in order to get your response - otherwise, they don't get to be in your main inbox.
 
-  1. There is no minimum balance or fee to withdraw your balance into a nano account you control.
-  2. FynCom is a custodial nano wallet, which means we assign you a nano account when you sign up with your email address. We handle everything related to digital currency account creation / sending / receiving / etc. You are free to transfer your funds at any time. Balances over $1,000 may require KYC/AML
-  3. For traditional cash-based withdrawals or gift card purchases, the minimum is $5.00
-  4. Cash-out options like Venmo, PayPal, Zelle, etc. will be available later this year.
+## **Rewards FAQs**
 
-  ## **Business model FAQs**
+1. There is no minimum balance or fee to withdraw your balance into a nano account you control.
+2. FynCom is a custodial nano wallet, which means we assign you a nano account when you sign up with your email address. We handle everything related to digital currency account creation / sending / receiving / etc. You are free to transfer your funds at any time. Balances over $1,000 may require KYC/AML
+3. For traditional cash-based withdrawals or gift card purchases, the minimum is $5.00
+4. Cash-out options like Venmo, PayPal, Zelle, etc. will be available later this year.
 
-  1. Aren't there other email spam solutions?
-  2. Yes. Now, take a look at your email inbox. Is it 100% free of spam? Is it 100% free of unwanted emails? Until we see 100% freedom from unwanted emails, we don't consider this a solved problem.
-  3. What about AI & ML?
-  4. Spammers use AI & ML too. These tools have been in place since the internet started. We're not here to continue this cat & mouse game. We're here to help the animals evolve & flourish in our global society. Until you address the root cause of the problem, economic incentives, you will never get rid of the symptoms.
-  5. Plus we have WAY more fun creating unique, untried methods to address this problem. EXTRA PLUS, we have less infrastructure cost, so we can have higher profit margins.
+## **Business model FAQs**
 
-  <div className="button-container">
-    <Link className="learn-more-btn cash centered" to="/fyncom-filters-email-edition">Click here to buy!</Link>
-  </div> <br/>
+1. Aren't there other email spam solutions?
+2. Yes. Now, take a look at your email inbox. Is it 100% free of spam? Is it 100% free of unwanted emails? Until we see 100% freedom from unwanted emails, we don't consider this a solved problem.
+3. What about AI & ML?
+4. Spammers use AI & ML too. These tools have been in place since the internet started. We're not here to continue this cat & mouse game. We're here to help the animals evolve & flourish in our global society. Until you address the root cause of the problem, economic incentives, you will never get rid of the symptoms.
+5. Plus we have WAY more fun creating unique, untried methods to address this problem. EXTRA PLUS, we have less infrastructure cost, so we can have higher profit margins.
 
-  ## **Author's personal notes**
+{/* prettier-ignore */}
+<div className="button-container"><Link className="learn-more-btn cash centered" to="/fyncom-filters-email-edition">Click here to buy!</Link></div>
+<br/>
 
-  I'm 32 and can remember a time when getting random communications used to be exciting! I used to wonder who would be calling, what adventures await me in that text…. A letter! Addressed to me? What could it possibly be?! I don't feel like we have that anymore. I'd like to bring that back. The best way to do that in today's society is to add digital currencies into the mix, allowing commercial outreach people to put their $$ where their money is. Allowing friends & families to bypass the system with a clever "hack". Doing this for calls, texts, or emails,
+## **Author's personal notes**
 
-  Spam is a byproduct of getting people to give you money in all kinds of weird ways, tricking people into giving up their bank numbers, confirm OTP codes, or buy gift cards. Ironically, the best way to eliminate scams is to directly merge money into communications.
+I'm 32 and can remember a time when getting random communications used to be exciting! I used to wonder who would be calling, what adventures await me in that text…. A letter! Addressed to me? What could it possibly be?! I don't feel like we have that anymore. I'd like to bring that back. The best way to do that in today's society is to add digital currencies into the mix, allowing commercial outreach people to put their $$ where their money is. Allowing friends & families to bypass the system with a clever "hack". Doing this for calls, texts, or emails,
 
-  #### **Quote of the Day**
+Spam is a byproduct of getting people to give you money in all kinds of weird ways, tricking people into giving up their bank numbers, confirm OTP codes, or buy gift cards. Ironically, the best way to eliminate scams is to directly merge money into communications.
 
-  _We're here to have fun making $$, put a billion smiles on a billion faces, and get our pending patents granted…. And we're all out of pending patents._
+#### **Quote of the Day**
+
+_We're here to have fun making $$, put a billion smiles on a billion faces, and get our pending patents granted…. And we're all out of pending patents._
 
 </Wrapper>
